<resources>
    <string name="app_name">Leitner Box</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Tap here to see the meaning</string>
    <string name="firstBox_button">First Box</string>
    <string name="secondBox_button">Second Box</string>
    <string name="thirdBox_button">Third Box</string>
    <string name="fourthBox_button">Fourth Box</string>
    <string name="fifthBox_button">Fifth Box</string>
    <string name="learnedWords_button">All Learned Words</string>
    <string name="box_default_title">The Nth Box</string>
    <string name="typeNewWordHere">Type your new word here:</string>
    <string name="wordPlaceHint">your new word</string>
    <string name="definitionPlaceHint">the meaning</string>
    <string name="cancelButton">Cancel</string>
    <string name="addButton">Add</string>
    <string name="knowTheWord">I knew</string>
    <string name="notKnowTheWord">I didn\'t know</string>
    <string name="clear_all_files">Clear All Five Boxes</string>
    <string name="delete">Delete</string>
    <string name="show_the_meaning">show the meaning</string>
    <string name="edit_word">edit word</string>
    <string name="delete_word">Delete</string>
    <string name="leitner_box">Leitner Box</string>
    <string name="readinessPercentageOfBox">1000 / 1000</string>
    <string name="numAllLearned">10000</string>
    <string name="settingsTitle">Settings</string>
    <string name="helpTitle">Help</string>
    <string name="settingsExplanationForClearingAllBoxes">If you want to reset your leitner box and start again with five new empty boxes, click on the button bellow:</string>
    <string name="settingsExplanationForClearingLearnedWordsBox">If you want to clear your \"Learned Words\" box, click on the button bellow:</string>
    <string name="clearingAll5BoxesmakingSureAlert">Are you sure you want to clear all five boxes?</string>
    <string name="clearingLearnedWordsBoxmakingSureAlert">Are you sure you want to clear the \"Learned Words\" box?</string>
    <string name="noMoreWordsReadyMessage">There are no more words ready to learn in this box!</string>
    <string name="title_allleanedwords">All Leaned Words</string>
    <string name="DeletingmakingSureAlert">Are you sure you want to delete this word?</string>
    <string name="helpInstructions">At the first scene you can choose which box from 5 boxes you want to go in;
        \n\nOr you can see all the words you have learned so far by going in the \"all learned words\" box.
        \n\nOn the right hand side of this box you can see the number of all the words you have leaned so far.
        \n\nOn the top toolbar you have 3 options: -from right to left- you go into \"help\", \"settings\" and \"add words\" respectively.
        \n\nBy clicking on adding words button you can add a new word to your first box. Do not forget to fill both \"word\" and \"meaning\" parts.
        \n\nIf you enter any of the boxes you can see the cards that are ready for you to see in that box. For each card you can see the meaning by clicking on the section bellow the part with the word in it.
        \n\nOn the bottom you can click on either \"I knew\" (if you guessed the meaning right) or \"I didn\'\t know\" buttons (if you couldn\'t guess the meaning right);
        \n\nOr you can just delete the word by clicking on \"delete\" button.</string>
    <string name="clear_learned_words_file">Clear Learned Words Box</string>
    <string name="daysOfBox">16 days : 24 hours</string>
</resources>
