<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".WordAdderActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:padding="6dp"
    android:background="#000000"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/addWordsInstruction_textView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:gravity="center"
            android:text="@string/typeNewWordHere"
            android:textAlignment="center"
            android:textColor="#FFEB3B"
            android:textSize="15sp"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/wordInput_editText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="start"
            android:hint="@string/wordPlaceHint"
            android:paddingStart="13dp"
            android:paddingEnd="13dp"
            android:singleLine="true"
            android:text=""
            android:textAlignment="viewStart"
            android:textColor="#000000"
            android:textSize="15sp"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/definitionInput_editText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_gravity="start"
            android:hint="@string/definitionPlaceHint"
            android:paddingStart="13dp"
            android:paddingEnd="13dp"
            android:singleLine="false"
            android:text=""
            android:textAlignment="viewStart"
            android:textColor="#000000"
            android:textSize="15sp"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="#702020"
                android:text="@string/cancelButton"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#FFFFFF"
                android:textColorHighlight="#FFC107" />

            <Button
                android:id="@+id/add_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="#702020"
                android:text="@string/addButton"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#FFFFFF"
                android:textColorHighlight="#FFC107" />

        </LinearLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>











